crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_type_params_count.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused function type parameter
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_count.move:6:16
  │
6 │ public fun foo<T>() {
  │                ^ Unused type parameter 'T'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused function type parameter
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_count.move:11:24
   │
11 │ public fun foo_spec<T, K>() {
   │                        ^ Unused type parameter 'K'.
   │
   = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Spec function have differ type params count than underlying func
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_count.move:11:1
   │  
11 │ ╭ public fun foo_spec<T, K>() {
12 │ │   foo<T>();
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
